--- a/chrome/android/java/res/layout/readinglist_main.xml
+++ b/chrome/android/java/res/layout/readinglist_main.xml
@@ -25,7 +25,7 @@
             android:layout_weight="1"/>
         ​
         <ImageView
-            android:id="@+id/readlist_item_delete"
+            android:id="@+id/close_reading_list"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center"
@@ -37,6 +37,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/clear_reading_list"
         android:text="Clear reading list..."
         android:textSize="12dp"
         android:layout_marginTop="12dp"
