--- a/chrome/android/java/res/layout/readinglist_dialog.xml
+++ b/chrome/android/java/res/layout/readinglist_dialog.xml
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/btn_readshare_content"
+        android:id="@+id/readshare_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="100dp"
