--- a/chrome/android/java/res/layout/modern_read_list_item_view.xml
+++ b/chrome/android/java/res/layout/modern_read_list_item_view.xml
@@ -23,7 +23,7 @@
             android:maxLines="1"
             android:textSize="15dp"
             android:fontWeight="1"
-            android:textColor="?android:attr/textColorPrimary" />
+            android:textColor="#222" />
 
         <TextView
             android:id="@+id/description"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="?android:attr/textColorPrimary"/>
+            android:textColor="#222"/>
     </LinearLayout>
 
 </merge>
